--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~7.0.0",
-    "@angular/common": "~7.0.0",
     "@angular/cli": "~7.0.3",
-    "@angular/compiler-cli": "~7.0.0",
+    "@angular/common": "~7.0.0",
     "@angular/compiler": "~7.0.0",
+    "@angular/compiler-cli": "~7.0.0",
     "@angular/core": "~7.0.0",
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
@@ -28,16 +28,18 @@
     "@fortawesome/free-solid-svg-icons": "^5.6.3",
     "bootstrap": "^4.2.1",
     "core-js": "^2.5.4",
+    "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "googleapis": "^36.0.0",
     "jquery": "^3.3.1",
+    "path": "^0.12.7",
     "popper.js": "^1.14.6",
     "rxjs": "~6.3.3",
     "typescript": "~3.1.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.3",    
+    "@angular-devkit/build-angular": "^0.12.3",
     "@angular/language-service": "~7.0.0",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
