--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
+    "@angular/cli": "~7.0.3",
+    "@angular/compiler-cli": "~7.0.0",
     "@angular-devkit/build-angular": "^0.12.3",
     "@angular/language-service": "~7.0.0",
     "@types/jasmine": "~2.8.8",
@@ -54,7 +56,8 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0"
+    "tslint": "~5.11.0",
+    "typescript": "~3.1.1"
   },
   "engines": {
     "node": "8.12.0",
